src/design/menu.scss
@import "sizes";
@import "typography";
@import "colors";

%menu-item {
  position: relative;
  width: 100%;
  text-decoration: none;
  &:not(.router-link-active) {
    color: inherit;
  }

  .menu-item-icon {
    font-size: 1.5rem;
  }

  .label {
    @extend %font-medium-m;
    color: #000;
    white-space: nowrap;
  }

  .menu-entry-popover {
    display: none;
    white-space: nowrap;
    border-radius: 6px;
    position: absolute;
    top: 50%;
    left: 110%;
    transform: translateY(-50%);
    padding: 0.3rem 1rem;
    @extend %font-medium-s;
    color: white;
    background-color: $neutral-80;
  }

  &:hover, &:focus {
    background-color: $color-hover-bg;

    .menu-entry-popover {
      display: block;
    }
  }

  &.root-menu-entry {
    height: $side-menu-entry-height;
    line-height: $side-menu-entry-height;
    display: flex;
    align-items: center;
    justify-content: center;

    &.expanded {
      justify-content: flex-start;
      padding: 8px 8px 8px 16px;
      gap: 8px;
    }

    &:not(.show-menu)::after {
      @extend %menu-separator;
      bottom: 0;
    }
  }

  &.sub-menu-item {
    display: block;
    height: $side-menu-sub-entry-height;
    line-height: $side-menu-sub-entry-height;
    text-align: left;

    .label {
      color: $neutral-80;
    }
  }
}

%menu-separator {
  content: "";
  position: absolute;
  left: 3%;
  width: 94%;
  height: 1px;
  background-color: $color-border;
}

